now estimate and subtract camera background

--- a/notebooks/save-projections.ipynb
+++ b/notebooks/save-projections.ipynb
@@ -3,16 +3,24 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/groups/ahrens/home/bennettd/anaconda3/lib/python3.5/site-packages/matplotlib/font_manager.py:280: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  'Matplotlib is building the font cache using fc-list. '\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from glob import glob\n",
     "import thunder as td\n",
     "from fish.util.fileio import load_image\n",
+    "from glymur import jp2k\n",
     "%matplotlib inline"
    ]
   },
@@ -35,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -43,9 +51,8 @@
      "output_type": "stream",
      "text": [
       "These data are from Yu.\n",
-      "Num raw images: 7200\n",
-      "Sampling rate:  1.58 Hz\n",
-      "Num existing projections: 7201\n",
+      "Num raw images: 6067\n",
+      "Sampling rate:  1.7100000000000002 Hz\n",
       "Bidirectional stack : False\n"
      ]
     }
@@ -65,7 +72,8 @@
     "            '/groups/ahrens/ahrenslab/davis/data/spim/raw/20160607/5dpf_cy171xcy221_f1_flash_1_20160607_205245/',\n",
     "            '/groups/ahrens/ahrenslab/davis/data/spim/raw/20160607/5dpf_cy171xcy221_f1_omr_1_20160607_183009/',\n",
     "            '/groups/ahrens/ahrenslab/davis/data/spim/raw/20170519/th1gc6s_gfaprgeco_7dpf_f1_omr_black_1_20170519_192713/',\n",
-    "            '/groups/ahrens/ahrenslab/FROM_TIER2/Yu/SPIM/active_datasets/20170228/fish4/20170228_4_1_gfaprgeco_hucgc_6dpf_shorttrials_20170228_185002/')\n",
+    "            '/groups/ahrens/ahrenslab/FROM_TIER2/Yu/SPIM/active_datasets/20170228/fish4/20170228_4_1_gfaprgeco_hucgc_6dpf_shorttrials_20170228_185002/',\n",
+    "            '/groups/ahrens/ahrenslab/FROM_TIER2/Yu/SPIM/active_datasets/20170228/fish3/20170228_3_1_gfaprgeco_hucgc_6dpf_shorttrials_20170228_165730/')\n",
     "\n",
     "# do different things to the directories depending on whether data are davis' or yu's\n",
     "paths = dict()\n",
@@ -87,7 +95,11 @@
     "    paths['proc'] = paths['raw'].replace('raw', 'proc')\n",
     "    paths['proj'] = paths['proc'] + 'proj/'\n",
     "    paths['reg'] = paths['proc'] + 'reg/'\n",
-    "    \n",
+    "\n",
+    "# Get the camera background image\n",
+    "background_im_fname = paths['raw'] + 'Background_0.tif'\n",
+    "background_im = jp2k.Jp2k(background_im_fname)[:]\n",
+    "\n",
     "fnames = glob(paths['raw'] + 'TM*')\n",
     "fnames.sort()    \n",
     "print('Num raw images: {0}'.format(len(fnames)))\n",
@@ -114,7 +126,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ims = td.images.fromlist(fnames, accessor=load_image, engine=sc, npartitions=len(fnames)).median_filter(size=(1,3,3)).astype('float32')\n",
@@ -272,7 +286,19 @@
    "outputs": [],
    "source": [
     "hist = np.histogram(ref.ravel()[::100], np.arange(ref.min(), ref.max()))\n",
-    "fill_val = np.round(hist[1][np.argmax(hist[0])])"
+    "#fill_val = np.round(hist[1][np.argmax(hist[0])])\n",
+    "fill_val = background_im.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.clip?"
    ]
   },
   {
@@ -286,10 +312,7 @@
     "from scipy.ndimage.interpolation import shift\n",
     "\n",
     "# important to apply -1 * translation\n",
-    "ims_registered = ims.map(lambda v: shift(v[1], -trans[:, v[0][0]], cval=fill_val), with_keys=True).astype('float32')\n",
-    "\n",
-    "# send background pixels to 0\n",
-    "#ims_registered = ims_registered.map(lambda v: v * mask)"
+    "ims_registered = ims.map(lambda v: shift(v[1], -trans[:, v[0][0]], cval=fill_val), with_keys=True).astype('float32')"
    ]
   },
   {
@@ -349,7 +372,14 @@
     "# take 300s baseline\n",
     "baseline_window = int(300 / fs_im)\n",
     "ds = 4\n",
+    "\n",
+    "# subtract camera background\n",
+    "ims_registered = ims_registered.map(lambda v: np.clip(v - fill_val, a_min=0, a_max=None))\n",
+    "\n",
+    "# uniform filter\n",
     "ser = ims_registered.uniform_filter(size=(1,ds,ds))[:,:,::ds,::ds].toseries()\n",
+    "\n",
+    "# take dff\n",
     "ser = ser.normalize(method = 'window', window=baseline_window).astype('float32')\n",
     "bounds = ser.map(lambda v: (v.min(), v.max())).toarray()"
    ]
@@ -477,7 +507,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "metadata = {}\n",
@@ -490,7 +522,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -536,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
