added baseline_offset parameter

--- a/notebooks/save-projections.ipynb
+++ b/notebooks/save-projections.ipynb
@@ -371,6 +371,7 @@
     "%%time\n",
     "# take 300s baseline\n",
     "baseline_window = int(300 / fs_im)\n",
+    "baseline_offset = 10\n",
     "ds = 4\n",
     "\n",
     "# subtract camera background\n",
@@ -380,7 +381,7 @@
     "ser = ims_registered.uniform_filter(size=(1,ds,ds))[:,:,::ds,::ds].toseries()\n",
     "\n",
     "# take dff\n",
-    "ser = ser.normalize(method = 'window', window=baseline_window).astype('float32')\n",
+    "ser = ser.normalize(method = 'window', window=baseline_window, offset=baseline_offset).astype('float32')\n",
     "bounds = ser.map(lambda v: (v.min(), v.max())).toarray()"
    ]
   },
