added presentation notebooks

--- a/notebooks/presentation/dmd-stimulation-example-cleaned.ipynb
+++ b/notebooks/presentation/dmd-stimulation-example-cleaned.ipynb
@@ -2,24 +2,67 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from glob import glob\n",
     "import numpy as np\n",
-    "from fish.util.fileio import read_image, read_images\n",
+    "from fish.util.fileio import read_image\n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('npg')\n",
     "%matplotlib inline\n",
     "from skimage.exposure import rescale_intensity\n",
     "from fish.util.plot import ROI, RoiDrawing\n",
-    "from fish.image.vol import get_stack_freq\n",
     "\n",
     "fnames = sorted(glob('/groups/ahrens/ahrenslab/davis/data/spim/proc/20180208/6dpf_cy252xcy293_optostim_test_20180208_185317/opto/*mean.tif'))\n",
     "ref = read_image('/groups/ahrens//ahrenslab/davis/data/spim/proc/20180208/6dpf_cy252xcy293_optostim_test_20180208_185317/reg/anat_reference.tif')\n",
-    "fs_im = get_stack_freq('/groups/ahrens/ahrenslab/davis/data/spim/raw/20180208/6dpf_cy252xcy293_optostim_test_20180208_185317/')[0]\n",
+    "#fs_im = get_stack_freq('/groups/ahrens/ahrenslab/davis/data/spim/raw/20180208/6dpf_cy252xcy293_optostim_test_20180208_185317/')[0]\n",
     "av_window = np.load('/groups/ahrens/ahrenslab/davis/data/spim/proc/20180208/6dpf_cy252xcy293_optostim_test_20180208_185317/opto/av_window.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting flika\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<flika.app.application.FlikaApplication at 0x2b08cbeee558>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting flika inside IPython\n"
+     ]
+    }
+   ],
+   "source": [
+    "import flika as flk\n",
+    "flk.start_flika()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ims = [read_image(f) for f in fnames]"
    ]
   },
   {
@@ -257,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
