update all notebooks

--- a/notebooks/dff_minimal.ipynb
+++ b/notebooks/dff_minimal.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "param_path = '/groups/ahrens/home/bennettd/big_twocolor_dff_params.json'\n",
+    "param_path = '/groups/ahrens/home/bennettd/dff_params.json'\n",
     "\n",
     "params = {}\n",
-    "params['spatial_downsampling'] = (1,4,4)\n",
+    "params['spatial_downsampling'] = (1,8,8)\n",
     "params['baseline_downsampling'] = 10\n",
     "params['baseline_percentile'] = 20\n",
     "params['baseline_window'] = 150\n",
     "params['baseline_offset'] = 10\n",
     "params['out_dtype'] = 'uint16'\n",
-    "params['save_multifile'] = True\n",
+    "params['save_multifile'] = False\n",
     "params['overwrite_registration'] = False\n",
     "\n",
     "with open(param_path,'w') as f:\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -38,26 +38,57 @@
       "Estimating dff...\n",
       "Saving images...\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/groups/ahrens/home/bennettd/anaconda3/lib/python3.6/site-packages/skimage/io/_io.py:132: UserWarning: /nrs/ahrens/davis/data/spim/proc/20180328/5dpf_ec43xcy171xcy331_f1_opto_1_20180328_205506/5dpf_ec43xcy171xcy331_f1_opto_1_20180328_205506.tif is a low contrast image\n",
+      "  warn('%s is a low contrast image' % fname)\n",
+      "/groups/ahrens/home/bennettd/anaconda3/lib/python3.6/site-packages/skimage/external/tifffile/tifffile.py:1088: UserWarning: truncating ImageJ file\n",
+      "  warnings.warn(\"truncating ImageJ file\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preparing images...\n",
+      "Registering images...\n",
+      "Registration params not found, performing registration\n",
+      "Estimating dff...\n",
+      "Saving images...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/groups/ahrens/home/bennettd/anaconda3/lib/python3.6/site-packages/skimage/io/_io.py:132: UserWarning: /nrs/ahrens/davis/data/spim/proc/20180328/5dpf_ec43xcy171xcy331_f1_opto_2_20180328_232414/5dpf_ec43xcy171xcy331_f1_opto_2_20180328_232414.tif is a low contrast image\n",
+      "  warn('%s is a low contrast image' % fname)\n",
+      "/groups/ahrens/home/bennettd/anaconda3/lib/python3.6/site-packages/skimage/external/tifffile/tifffile.py:1088: UserWarning: truncating ImageJ file\n",
+      "  warnings.warn(\"truncating ImageJ file\")\n"
+     ]
     }
    ],
    "source": [
     "from os.path import exists\n",
     "from os import makedirs\n",
     "from fish.image.zds import ZDS\n",
-    "import fish.scripts.save_dff as sdff\n",
-    "from imp import reload\n",
-    "reload(sdff)\n",
+    "from fish.scripts import save_dff\n",
     "# Yu's 2-color data \n",
     "# '/groups/ahrens/ahrenslab/YuMu/SPIM/active_datasets/20170221/fish5/20170221_5_3_gfaprgeco_hucgc_6dpf_wholebrain_20170221_223941/raw/'\n",
-    "raw_paths = ('/nrs/ahrens/Yu/newfromdm11/glia_neuron_imaging/20170228/fish4/20170228_4_1_gfaprgeco_hucgc_6dpf_shorttrials_20170228_185002/raw/',)\n",
+    "# /nrs/ahrens/Yu/newfromdm11/glia_neuron_imaging/20170228/fish4/20170228_4_1_gfaprgeco_hucgc_6dpf_shorttrials_20170228_185002/raw/\n",
+    "raw_paths = ('/nrs/ahrens/davis/data/spim/raw/20180328/5dpf_ec43xcy171xcy331_f1_opto_1_20180328_205506/',\n",
+    "            '/nrs/ahrens/davis/data/spim/raw/20180328/5dpf_ec43xcy171xcy331_f1_opto_2_20180328_232414/')\n",
     "\n",
     "for raw_path in raw_paths:\n",
-    "    out_path = '/groups/ahrens/ahrenslab/davis/tmp/{0}/'.format(ZDS(raw_path).metadata['data_header'])\n",
+    "    out_path = raw_path.replace('raw','proc')\n",
     "\n",
     "    if not exists(out_path):\n",
     "        makedirs(out_path)\n",
     "    \n",
-    "    sdff.generate_dff_images(raw_path, param_path, out_path, sc)"
+    "    save_dff.generate_dff_images(raw_path, param_path, out_path, sc)"
    ]
   },
   {
@@ -106,7 +137,12 @@
     "/nrs/ahrens/davis/data/spim/raw/20180321/f1/5dpf_ec43xcy331xcy171_f1_opto_1_20180321_115401/\n",
     "/nrs/ahrens/davis/data/spim/raw/20180321/f1/5dpf_ec43xcy331xcy171_f1_opto_2_20180321_162917/\n",
     "/nrs/ahrens/davis/data/spim/raw/20180321/f2/5dpf_ec43xcy331xcy171_f2_opto_1_20180321_180812/\n",
-    "/nrs/ahrens/davis/data/spim/raw/20180321/f2/5dpf_ec43xcy331xcy171_f2_opto_2_20180321_212747/"
+    "/nrs/ahrens/davis/data/spim/raw/20180321/f2/5dpf_ec43xcy331xcy171_f2_opto_2_20180321_212747/\n",
+    "/nrs/ahrens/davis/data/spim/raw/20180406/7dpf_ec43xcy171xcy331_opto_1_20180406_121139/\n",
+    "/nrs/ahrens/davis/data/spim/raw/20180406/7dpf_ec43xcy171xcy331_opto_2_20180406_144001/\n",
+    "/nrs/ahrens/davis/data/spim/raw/20180406/7dpf_ec43xcy171xcy331_opto_3_20180406_151826/\n",
+    "/nrs/ahrens/davis/data/spim/raw/20180328/5dpf_ec43xcy171xcy331_f1_opto_1_20180328_205506/\n",
+    "/nrs/ahrens/davis/data/spim/raw/20180328/5dpf_ec43xcy171xcy331_f1_opto_2_20180328_232414/"
    ]
   },
   {
