--- a/notebooks/presentation/count_glia.ipynb
+++ b/notebooks/presentation/count_glia.ipynb
@@ -2,26 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting flika\n",
-      "Starting flika inside IPython\n"
+      "Starting flika\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<flika.app.application.FlikaApplication at 0x2b5a64a14d38>"
+       "<flika.app.application.FlikaApplication at 0x2b528abf0d38>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting flika inside IPython\n"
+     ]
     }
    ],
    "source": [
