--- a/notebooks/whole-brain-dff-average-by-cell-type.ipynb
+++ b/notebooks/whole-brain-dff-average-by-cell-type.ipynb
@@ -870,9 +870,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -884,7 +884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
